docs/bit-lang.ebnf
digit = "0" |"1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9" ;

hex_letter = "A" | "B" | "C" | "D" | "E" | "F" | "a" | "b" | "c" | "d" | "e" | "f"; 

boolean = "0" | "1";

seperator = "_"

white_space = " " | "\t";

spaces = "" | {white_space};


index = {digit};

single_bit = index;

range = index ".." index;

bit_spec = index | range;  (* NEW *)

(* empty_bit_spec = "[" spaces "]"; 

bit_spec_delimited = "[" bit_spec "]" | empty_bit_spec; *)

(* word = [index] bits_spec_delimited | index "[" literal "]"; *)   

word = bit_spec | [index] "[" [bit_spec] "]" | index "[" literal "]";   (* NEW *)

word_range = word ".." word [repeat]

limit = {digit};

repeat = ";" [word] condition limit ;

condition = "" | "==" | "<" | "<=" ; (* "" is equivalent to "==" *) ;

repeating_word= word [word] [repeat];  


(* TODO Words as variables *)

literal = hex_literal | boolean_literal;

hex_literal = hex_header {digit | hex_letter | seperator};

hex_header = "0x" | "0X"

boolean_literal = boolean_header {boolean | seperator}

boolean_header = "0b" | "0B"

statement = bit_spec |  bit_spec_delimited | word | word_range | repeating_word ;
